--- a/evaluation_metrics_app.ipynb
+++ b/evaluation_metrics_app.ipynb
@@ -15,14 +15,12 @@
     "import sklearn.linear_model\n",
     "from sklearn import metrics\n",
     "from sklearn.datasets import make_classification\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.inspection import DecisionBoundaryDisplay\n",
+    "#from sklearn.inspection import DecisionBoundaryDisplay\n",
     "\n",
     "from plotnine import *\n",
     "import ipywidgets as widgets\n",
-    "from ipywidgets import FloatSlider, IntSlider, HBox, VBox, interactive_output, Layout, AppLayout\n",
+    "from ipywidgets import FloatSlider, Dropdown, IntSlider, HBox, VBox, interactive_output, Layout, AppLayout\n",
     "\n",
-    "from functools import lru_cache\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\", module = \"plotnine\\..*\" )"
    ]
@@ -38,7 +36,7 @@
     "# temporarily calling data generation function for each plot due to subplotting/refresh issue\n",
     "\n",
     "common_params = {\n",
-    "    \"n_samples\": 400,\n",
+    "    \"n_samples\": 300,\n",
     "    \"n_features\": 2,\n",
     "    \"n_informative\": 2,\n",
     "    \"n_redundant\": 0,\n",
@@ -48,12 +46,11 @@
     "    \"shuffle\": False\n",
     "}\n",
     "    \n",
-    "@lru_cache(32)\n",
     "def generate_data_for_plotting(class_imbalance, separation, cutoff):\n",
     "    \n",
     "    X, y = make_classification(**common_params, weights=[class_imbalance], class_sep = separation)\n",
     "    \n",
-    "    # fit the data to a logistic regression model (no train/test split for demo purposes)\n",
+    "    # fit a logistic regression model - will eventually update to include more classifiers\n",
     "    logreg = sklearn.linear_model.LogisticRegression()\n",
     "    logreg.fit(X, y)\n",
     "    \n",
@@ -78,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "7f8b43e5-557f-42a1-87bd-59ae0ed24d82",
    "metadata": {},
    "outputs": [],
@@ -86,7 +83,7 @@
     "### CREATE PLOTS ###\n",
     "\n",
     "colors = [\"#34585F\", \"#A4B89E\", \"#C6CDA7\", \"#EFE0B7\", \"#BEAC7C\"]\n",
-    "    \n",
+    "\n",
     "def plot_decision_boundary(class_imbalance, separation, cutoff):\n",
     "\n",
     "    # prep data\n",
@@ -96,8 +93,8 @@
     "    w1, w2 = logreg.coef_.T\n",
     "    c = -b/w2\n",
     "    m = -w1/w2\n",
-    "    xmin, xmax = -2.5, 4.25\n",
-    "    ymin, ymax = -3, 3\n",
+    "    xmin, xmax = -2.25, 4.25\n",
+    "    ymin, ymax = -3.75, 3.75\n",
     "    \n",
     "    # xmin, xmax = df['x1'].min()-1.25, df['x1'].max()+1 \n",
     "    # ymin, ymax = df['x2'].min()-0.5, df['x2'].max()+0.5 \n",
@@ -106,7 +103,7 @@
     "    yd = m*xd + c\n",
     "    \n",
     "    # plot data\n",
-    "    p1 = (ggplot(df, aes(x = 'x1', y = 'x2', fill = 'y')) +\n",
+    "    (ggplot(df, aes(x = 'x1', y = 'x2', fill = 'y')) +\n",
     "            geom_point(aes(color = 'color'), size = 3.5, alpha = .85) +\n",
     "            geom_abline(intercept = c,\n",
     "                slope = m,\n",
@@ -128,7 +125,10 @@
     "                      y = r'$x_2$') +\n",
     "            coord_flip() +\n",
     "            theme_minimal() +\n",
-    "            theme(legend_position=(.68, .15), \n",
+    "            theme(legend_position=(.68, .15),\n",
+    "                  panel_grid_major = element_blank(),\n",
+    "                  legend_background=element_blank(),\n",
+    "                  legend_box_background=element_blank(),\n",
     "                  legend_direction='horizontal') +\n",
     "            guides(color = guide_legend(override_aes = {'fill': \"white\"}))\n",
     "    ).draw()\n",
@@ -158,9 +158,10 @@
     "                                guide = False) +\n",
     "              ylim(0,1) +\n",
     "              labs(title = \"Accuracy, precision, and recall\",\n",
-    "                   x = None,\n",
+    "                   x = \" \",\n",
     "                   y = None) +\n",
-    "              theme_minimal() \n",
+    "              theme_minimal() +\n",
+    "              theme(panel_grid_major = element_blank())\n",
     "    ).draw()\n",
     "\n",
     "\n",
@@ -184,50 +185,41 @@
     "        geom_line(color = \"#34585F\", size = 1.5) + \n",
     "        geom_abline(linetype = 'dashed') +\n",
     "        geom_point(aes(x = fpr[ix], y = tpr[ix]), size = 7, color = \"#A4B89E\", alpha = .2) +\n",
-    "        geom_text(aes(x = 0.85, y = 0, label = ['AUC: ' + str(roc_auc)])) +\n",
-    "        labs(title = \"ROC AUC\",\n",
+    "        #geom_text(aes(x = 0.85, y = 0, label = ['AUC: ' + str(roc_auc)])) +\n",
+    "        labs(title = f\"ROC AUC = {roc_auc}\",\n",
     "             x = \"False positive rate\",\n",
     "             y = \"True positive rate\") +\n",
-    "        theme_minimal()).draw()\n"
+    "        theme_minimal() +\n",
+    "        theme(panel_grid_major = element_blank())\n",
+    "    ).draw()\n",
+    "\n",
+    "    \n",
+    "def plot_prob_density(class_imbalance, separation, cutoff):\n",
+    "    \n",
+    "    # prep data\n",
+    "    logreg, df = generate_data_for_plotting(class_imbalance, separation, cutoff)\n",
+    "    \n",
+    "    # plot data\n",
+    "    (ggplot(df, aes(x='pr', fill='y')) + \n",
+    "     geom_density(alpha=0.5, color='grey') +\n",
+    "     geom_vline(xintercept=cutoff, color='grey', linetype='dashed') +\n",
+    "     scale_fill_manual(labels = ['0', '1'], values = ['#196675', '#83ad76']) +\n",
+    "     labs(title=\"Predicted probability density\",\n",
+    "          x=\" \",\n",
+    "          y=\"Density\",\n",
+    "          fill=\"\") +\n",
+    "     theme_minimal() +\n",
+    "     theme(legend_position='none',\n",
+    "           panel_grid_major = element_blank(),\n",
+    "           axis_text_y=element_blank())\n",
+    "    ).draw() \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "3d46e3bf-c1ae-446b-86dd-637c370c5d69",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#### CREATE WIDGETS ###\n",
-    "\n",
-    "# define widgets\n",
-    "cb_widget = FloatSlider(description = \"Imbalance\",\n",
-    "                        continuous_update = False,\n",
-    "                        min=0.1, max=0.9, step=0.1, value=0.5)\n",
-    "sep_widget = FloatSlider(description = \"Separation\",\n",
-    "                        continuous_update = False,\n",
-    "                         min=.1, max=1.1, step=0.1, value=0.6)\n",
-    "cutoff_widget = FloatSlider(description = \"Cutoff\",\n",
-    "                        continuous_update = False,\n",
-    "                         min=.1, max=.9, step=0.1, value=0.5)\n",
-    "\n",
-    "\n",
-    "# interact plots with widgets\n",
-    "scatter_plot = interactive_output(plot_decision_boundary, {'class_imbalance': cb_widget, \n",
-    "                                                   'separation': sep_widget,\n",
-    "                                                   'cutoff': cutoff_widget})\n",
-    "metrics_plot = interactive_output(plot_metrics_bar_chart, {'class_imbalance': cb_widget, \n",
-    "                                                   'separation': sep_widget,\n",
-    "                                                   'cutoff': cutoff_widget})\n",
-    "roc_plot = interactive_output(plot_roc_curve, {'class_imbalance': cb_widget, \n",
-    "                                                   'separation': sep_widget,\n",
-    "                                                   'cutoff': cutoff_widget})\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "id": "6161b570-3484-47a1-b0bb-a8702e46c229",
+   "execution_count": 4,
+   "id": "33091924-90d3-4df8-a135-1560cb08240f",
    "metadata": {},
    "outputs": [
     {
@@ -235,8 +227,20 @@
       "text/html": [
        "<style>\n",
        ".box_style{\n",
-       "    background-color: #fff;\n",
+       "    background-color: #f7f7f7;\n",
+       "    font-size: .25rem;\n",
+       "    border-left: 1px solid #cecece;\n",
+       "    border-top: 1px solid #cecece;\n",
+       "    border-bottom: 1px solid #cecece;\n",
+       "\n",
        "}\n",
+       ".plot_style{\n",
+       "    background-color: #fff;\n",
+       "    border-right: 1px solid #cecece;\n",
+       "    border-top: 1px solid #cecece;\n",
+       "    border-bottom: 1px solid #cecece;\n",
+       "}\n",
+       "\n",
        "p{\n",
        "    font-style: italic;\n",
        "    font-size: .75rem;\n",
@@ -256,8 +260,20 @@
     "%%html\n",
     "<style>\n",
     ".box_style{\n",
-    "    background-color: #fff;\n",
+    "    background-color: #f7f7f7;\n",
+    "    font-size: .25rem;\n",
+    "    border-left: 1px solid #cecece;\n",
+    "    border-top: 1px solid #cecece;\n",
+    "    border-bottom: 1px solid #cecece;\n",
+    "\n",
     "}\n",
+    ".plot_style{\n",
+    "    background-color: #fff;\n",
+    "    border-right: 1px solid #cecece;\n",
+    "    border-top: 1px solid #cecece;\n",
+    "    border-bottom: 1px solid #cecece;\n",
+    "}\n",
+    "\n",
     "p{\n",
     "    font-style: italic;\n",
     "    font-size: .75rem;\n",
@@ -268,98 +284,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
-   "id": "0a6b63cb-7453-48af-b9ad-835d2e9d7d0a",
+   "execution_count": 5,
+   "id": "0264272b-ad1f-42d6-ae7f-a39cc2f7a2b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### CREATE WIDGETS ###\n",
+    "\n",
+    "# define widgets\n",
+    "class_widget = Dropdown(options=[('Logistic Regression', 1)], #to update with additional classifiers\n",
+    "                                value=1,\n",
+    "                                description='Classifier',\n",
+    "                                layout = Layout(margin = '10px 10px 20px 0',\n",
+    "                                                        padding = '0 50px 0 0'))\n",
+    "cb_widget = FloatSlider(description = \"Imbalance\",\n",
+    "                        continuous_update = False,\n",
+    "                        min=0.1, max=0.9, step=0.1, value=0.5)\n",
+    "sep_widget = FloatSlider(description = \"Separation\",\n",
+    "                        continuous_update = False,\n",
+    "                         min=0.5, max=1.5, step=0.1, value=1.0)\n",
+    "cutoff_widget = FloatSlider(description = \"Cutoff\",\n",
+    "                        continuous_update = False,\n",
+    "                         min=.1, max=.9, step=0.1, value=0.5)\n",
+    "\n",
+    "\n",
+    "# interact plots with widgets\n",
+    "widget_vars = {'class_imbalance': cb_widget, \n",
+    "               'separation': sep_widget,\n",
+    "               'cutoff': cutoff_widget}\n",
+    "scatter_plot = interactive_output(plot_decision_boundary, widget_vars)\n",
+    "density_plot = interactive_output(plot_prob_density, widget_vars)\n",
+    "metrics_plot = interactive_output(plot_metrics_bar_chart, widget_vars)\n",
+    "roc_plot = interactive_output(plot_roc_curve, widget_vars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bb582a24-ba3c-44fb-bf41-405ddc87256b",
    "metadata": {},
    "outputs": [],
    "source": [
     "### SET UP APP ###\n",
     "\n",
-    "# header = widgets.HTML(\"<h1>Visualizing class imbalance and model evaluation metrics</h1>\")\n",
-    "# footer = widgets.HTML(\"\"\"<p>Note: Results should be taken with a grain of salt, as this visualization is only meant to convey the intuition behind the \n",
-    "#                       effects of imbalanced data and other parameters on model evaluation metrics.</p>\"\"\",\n",
-    "#                       layout=widgets.Layout(margin='30px 0 0 0'))\n",
-    "\n",
-    "# widget_box = VBox([cb_widget, sep_widget, cutoff_widget], layout=widgets.Layout(margin='3px', \n",
-    "#                                                                                 border='solid 1px #fff', \n",
-    "#                                                                                 flex_flow='row wrap', \n",
-    "#                                                                                 align_content='flex-start', \n",
-    "#                                                                                 justify_content='flex-start'))\n",
-    "# widget_box.add_class(\"box_style\")\n",
-    "\n",
-    "# plots_box = HBox([scatter_plot, metrics_plot, roc_plot], layout=widgets.Layout(width='100%', \n",
-    "#                                                                                display = 'flex',\n",
-    "#                                                                                flex_flow = 'row',\n",
-    "#                                                                                justify_content = 'space-between',\n",
-    "#                                                                                align_items = 'center'))\n",
-    "\n",
-    "# app = AppLayout(header=header,\n",
-    "#           left_sidebar=widget_box,\n",
-    "#           center=plots_box,\n",
-    "#           right_sidebar=None,\n",
-    "#           footer=footer,\n",
-    "#           pane_widths=['250px', 1, 1],\n",
-    "#           pane_heights=['140px', 1, '140px'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cd9d13ff-08a5-4a3d-9193-48210cb69bd9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### DISPLAY APP ###\n",
-    "\n",
-    "#display(app)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "id": "0f26fb8b-ea6d-4549-a497-8500b5f91d4c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# SET UP APP\n",
-    "\n",
-    "header = widgets.HTML(\"<h1>Visualizing class imbalance and model evaluation metrics</h1>\")\n",
+    "header = widgets.HTML(\"<h1>Visualizing class imbalance and model evaluation metrics</h1>\",\n",
+    "                      layout=widgets.Layout(margin='0 0 10px 0'))\n",
     "footer = widgets.HTML(\"\"\"<p>Note: Results should be taken with a grain of salt, as this visualization is only meant to convey the intuition behind the \n",
     "                      effects of imbalanced data and other parameters on model evaluation metrics.</p>\"\"\",\n",
-    "                      layout=widgets.Layout(margin='40px 0 0 0'))\n",
+    "                      layout=widgets.Layout(margin='20px 0 0 0',\n",
+    "                                            max_width='1000px'))\n",
     "\n",
-    "widget_box = VBox([cb_widget, sep_widget, cutoff_widget], layout=widgets.Layout(margin='10px 0 15px 0', \n",
-    "                                                                                border='solid 1px #cecece', \n",
+    "widget_box = VBox([class_widget, cb_widget, sep_widget, cutoff_widget], layout=Layout(padding='15px 0px 3px 3px',\n",
+    "                                                                                #border='solid 1px #cecece', \n",
+    "                                                                                border_left = 'solid 1px #cecece',\n",
     "                                                                                flex_flow='row wrap', \n",
-    "                                                                                align_content='center', \n",
-    "                                                                                justify_content='center'))\n",
-    "widget_box.add_class(\"box_style\")\n",
+    "                                                                                align_content='flex-start', \n",
+    "                                                                                justify_content='flex-start'))\n",
+    "top_box = HBox([scatter_plot, density_plot], layout=Layout(max_width='650px',\n",
+    "                                                                   display = 'flex',\n",
+    "                                                                   flex_flow = 'row',\n",
+    "                                                                   justify_content = 'space-between',\n",
+    "                                                                   align_items = 'center'))\n",
+    "bottom_box = HBox([metrics_plot, roc_plot], layout=Layout(max_width='650px',\n",
+    "                                                                  display = 'flex',\n",
+    "                                                                  flex_flow = 'row',\n",
+    "                                                                  justify_content = 'space-between',\n",
+    "                                                                  align_items = 'center'))\n",
+    "plots_box = VBox([top_box, bottom_box], layout=Layout(max_width='700px',\n",
+    "                                                              #margin='3px',\n",
+    "                                                              padding='10px',\n",
+    "                                                              #max_height='600px',\n",
+    "                                                              #border='solid 1px #cecece',\n",
+    "                                                              justify_content = 'space-between',\n",
+    "                                                              align_items = 'center'))\n",
     "\n",
-    "plot_box = HBox([scatter_plot, metrics_plot, roc_plot], layout=widgets.Layout(margin='15px 0 15px 0', \n",
-    "                                                                              width='100%', \n",
-    "                                                                              display = 'flex', \n",
-    "                                                                              flex_flow = 'row',\n",
-    "                                                                              justify_content = 'space-between',\n",
-    "                                                                              align_items = 'center'))\n",
+    "widget_box.add_class(\"box_style\")\n",
+    "plots_box.add_class(\"plot_style\")\n",
+    "\n",
     "app = AppLayout(header=header,\n",
-    "          left_sidebar=None,\n",
-    "          center=VBox([widget_box, plot_box]),\n",
+    "          left_sidebar=widget_box,\n",
+    "          center=plots_box,\n",
     "          right_sidebar=None,\n",
-    "          footer=footer,          \n",
-    "          #pane_widths=['250px', 1, 1],\n",
-    "          pane_heights=['80px', 1, '100px'])"
+    "          footer=footer,\n",
+    "          pane_widths=['250px', 1, 1],\n",
+    "          pane_heights=['70px', 1, '90px'],\n",
+    "          border='solid 1px #cecece')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "e020b28d-c68f-4b21-aad4-f0c5c6318dbf",
+   "execution_count": 7,
+   "id": "556291d1-d1e9-40a5-bf87-5e9273cc559f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b21fc255f3a44c1b2f8098f6eb8bf25",
+       "model_id": "26467b2db16e403fa2958612b309beaa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -372,10 +393,18 @@
     }
    ],
    "source": [
-    "# DISPLAY APP\n",
+    "### DISPLAY APP ###\n",
     "\n",
     "display(app)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3ed70c6-eb5d-44b4-9433-27c1f83d7bf8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -394,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
